<resources>
    <string name="app_name">RuCafeApp</string>
    <string name="title_activity_ordering_donuts">OrderingDonuts</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="your_orders">Your Orders</string>
    <string name="store_orders">Store Orders</string>
    <string name="your_order">Your Order</string>
    <string name="subtotal">subtotal</string>
    <string name="sales_tax">sales tax</string>
    <string name="total">total</string>
    <string name="place_the_order">Place the order</string>
    <string name="textview">TextView</string>
    <string-array name="donutNames">
        <item>Chocolate - Cake</item>
        <item>Glazed Chocolate - Yeast</item>
        <item>Glazed - Hole</item>
        <item>Jelly - Yeast</item>
        <item>Jelly - Cake</item>
        <item>Mango - Cake</item>
        <item>Strawberry Frosted - Yeast</item>
        <item>Vanilla - Hole</item>
        <item>Jelly - Hole</item>
        <item>Sugar - Cake</item>
        <item>Sugar - Hole</item>
        <item>Vanilla Creme - Yeast</item>
    </string-array>
</resources>