<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourOrder">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="173dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/your_order"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="159dp"
        android:layout_height="103dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoppingcart" />

    <ListView
        android:id="@+id/list_of_orders"
        android:layout_width="336dp"
        android:layout_height="178dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="256dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtotal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="257dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/salesTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sales_tax" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="258dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/total" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="298dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="90dp"
        android:onClick="placeOrder"
        android:text="@string/place_the_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>